# Monolith

./: CMakeLists.txt  README.md  core.cpp  core.h  depends.h
modules/: diagnostic.h
modules/ai/: ai_manager.h  ai_motion.h  ai_tasker.h  ai_vision.h
modules/components/: camera.h  components_manager.h  gps.h  sonars.h  wheels.h  wifi.h
